fixed coloring and spacing

--- a/Code/css/style.css
+++ b/Code/css/style.css
@@ -23,7 +23,7 @@ img {
 	background:rgba(47, 39, 39, .60);
 }
 
-#dark-overlay {
+/*#dark-overlay {
 	position: absolute;
    top: 0;
    left: 0;
@@ -31,6 +31,10 @@ img {
    height: 100%;
    background-color: black;
    opacity: 0.6;
+}*/
+
+#cheesewings {
+	margin-top: -20px;
 }
 
 button.btn.btn-default {
@@ -39,8 +43,8 @@ button.btn.btn-default {
 }
 
 @media (min-width: 600px) {
-#beer {
-	margin-top: 2vw;
+#beer2 {
+	margin-top: 28px;
 }
 
 .sauce {
@@ -81,8 +85,17 @@ button.btn.btn-default {
 	margin: 0;
 }
 
+.nav:hover {
+	color: yellow;
+}
+
 div.row.nav {
 	margin: 0;
+}
+
+ul.nav a:hover { 
+	color: #F3CA40;
+	background-color: #000072; 
 }
 
 .menu-item-price-top {
@@ -110,6 +123,51 @@ div.row.nav {
 div.menu-item-title {
 	font-size: large;
 	font-weight: bold;
+}
+
+.menu-items {
+	content: "";
+    display: table;
+    clear: both;
+    background-color: #000072;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.menu, .sauce, .menu-section-header {
+    background-color: #000072;	
+    margin: 0;
+}
+
+.sauce {
+	margin-left: 15px;
+    margin-right: 15px;
+}
+
+.menu-section-header {
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.menu-item-title, .menu-item-description, .menu-item-price-top, p, td, tr {
+	color: white;
+	font-family: 'Asap', sans-serif;
+}
+
+.menu-section-title {
+	color: #000072;
+	font-family: 'Pathway Gothic One', sans-serif;
+	background-color: white;
+}
+
+@media (max-width: 500px) {
+	.nav {
+		display: none;
+	}
+}
+
+.table-responsive {
+	max-width: 1125px;
 }
 
 /*.menu-items {
